Establish button look

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Gregory</title>
+    <title>Gregory Anderson</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Gregory Anderson</h1>
-
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
-    <img src="./images/Greg.png" alt="Gregory logo" height="100px" width="100px">
+    <header>
+      <h1 class="header-item">Gregory Anderson</h1>
+      <img class="header-item" src="./images/Greg.png" alt="Gregory logo">
+    </header>
+      <main>
+        <section class="button" id="button-4">
+          <div id="underline"></div>
+          <p>Summary</p>
+        </section>
+      </main>
 
 
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
